// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scan should allow to pass a startPath 1`] = `
Object {
  "m/44'/134'/11'/0/0": WalletData {
    "bigNumberService": BigNumberService {
      "configRepository": ConfigRepository {},
    },
    "data": Object {
      "address": "lskr8nouvjpm5te9smbtj4satv43rwmhkdvydhuts",
      "balance": 0,
      "publicKey": "44e94b00d812b2c92c6e41d90e19aa9b849b81a3c719146fc657b497a6471705",
    },
  },
}
`;

exports[`scan should return scanned wallet 1`] = `
Object {
  "m/44'/134'/0'/0/0": WalletData {
    "bigNumberService": BigNumberService {
      "configRepository": ConfigRepository {},
    },
    "data": Object {
      "dpos": Object {
        "delegate": Object {
          "consecutiveMissedBlocks": 0,
          "isBanned": false,
          "lastForgedHeight": 14075260,
          "totalVotesReceived": "0",
          "username": "",
        },
      },
      "keys": Object {
        "mandatoryKeys": Array [],
        "numberOfSignatures": 0,
        "optionalKeys": Array [],
      },
      "sequence": Object {
        "nonce": "0",
      },
      "summary": Object {
        "address": "lsk8s6v2pdnxvab9oc42wbhvtb569jqg2ubjxgvvj",
        "balance": "6950000000",
        "isDelegate": false,
        "isMultisignature": false,
        "publicKey": null,
        "username": "",
      },
      "token": Object {
        "balance": "6950000000",
      },
    },
  },
  "m/44'/134'/1'/0/0": WalletData {
    "bigNumberService": BigNumberService {
      "configRepository": ConfigRepository {},
    },
    "data": Object {
      "dpos": Object {
        "delegate": Object {
          "consecutiveMissedBlocks": 0,
          "isBanned": false,
          "lastForgedHeight": 14075260,
          "totalVotesReceived": "0",
          "username": "",
        },
      },
      "keys": Object {
        "mandatoryKeys": Array [],
        "numberOfSignatures": 0,
        "optionalKeys": Array [],
      },
      "sequence": Object {
        "nonce": "0",
      },
      "summary": Object {
        "address": "lskbh47p4ts33c6c5pjvwa32424qr8px8pwfx8e4s",
        "balance": "1280000000",
        "isDelegate": false,
        "isMultisignature": false,
        "publicKey": null,
        "username": "",
      },
      "token": Object {
        "balance": "1280000000",
      },
    },
  },
  "m/44'/134'/2'/0/0": WalletData {
    "bigNumberService": BigNumberService {
      "configRepository": ConfigRepository {},
    },
    "data": Object {
      "dpos": Object {
        "delegate": Object {
          "consecutiveMissedBlocks": 0,
          "isBanned": false,
          "lastForgedHeight": 14075260,
          "totalVotesReceived": "0",
          "username": "",
        },
      },
      "keys": Object {
        "mandatoryKeys": Array [],
        "numberOfSignatures": 0,
        "optionalKeys": Array [],
      },
      "sequence": Object {
        "nonce": "0",
      },
      "summary": Object {
        "address": "lskksmfa2q2evtwmfneaon79u9hv7a3saokuy9tv9",
        "balance": "690000000",
        "isDelegate": false,
        "isMultisignature": false,
        "publicKey": null,
        "username": "",
      },
      "token": Object {
        "balance": "690000000",
      },
    },
  },
  "m/44'/134'/3'/0/0": WalletData {
    "bigNumberService": BigNumberService {
      "configRepository": ConfigRepository {},
    },
    "data": Object {
      "address": "lskrt9csby845j45crdat7j8mcnpgdk2w4yqhbwaj",
      "balance": 0,
      "publicKey": "5c12c704e97b79a7abd0cdb36336e4bdc675fcec5b8844d1fc95380c1d5db052",
    },
  },
}
`;

exports[`scan should support legacy 1`] = `
Object {
  "m/44'/134'/0'/0/0": WalletData {
    "bigNumberService": BigNumberService {
      "configRepository": ConfigRepository {},
    },
    "data": Object {
      "address": "7399986239080551550L",
      "balance": 0,
      "publicKey": "d48522677df50defd175c85072309c7643dbc6bdc63c7665a302579ed2ccaedb",
    },
  },
}
`;
